the section done

--- a/index.html
+++ b/index.html
@@ -204,7 +204,126 @@
             </div>
         </div>
     </section>
+    <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h">
+        <div class=" w-100 d-flex justify-content-center h-100">
+            <div class="d-flex wid-imp rl-border">
+                <div class=" d-flex flex-column firstcardinfo">
+                </div>
+                <div class="rl-border card-back-blank">
+                </div>
+                <div class="card-back-blank">
+                </div>
+                <div class="l-border card-back-blank ">
+                </div>
 
+            </div>
+        </div>
+    </section>
+
+
+    <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
+        <div class=" w-100 d-flex justify-content-center h-100">
+            <div class="d-flex wid-imp rl-border">
+                <div class=" d-flex flex-column firstcardinfo">
+                    <div class="h-50">03<span><br>
+                        Portfolio
+                        </span></div>
+                </div>
+                <div class="l-border card-back-blank full-l main-tit2">
+                    Case studies
+                </div>
+
+                <div class="l-border card-back-blank buttonsection ">
+                    <div class="buttonback">
+                        <i class="fa fa-angle-right" aria-hidden="true"></i>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
+        <div class=" w-100 d-flex justify-content-center h-100">
+            <div class="d-flex wid-imp rl-border">
+                <div class=" d-flex flex-column firstcardinfo">
+                </div>
+                <div class="l-border card-back-blank">
+                </div>
+                <div class="card-back-blank">
+                </div>
+                <div class="l-border card-back-blank ">
+                </div>
+
+            </div>
+        </div>
+    </section>
+    
+<section class="w-100 d-flex overflow-hidden image-coll">
+    <div class="d-flex flex-column clas-uk">
+        <div><img src="/image/coll/1.jpg" alt=""></div>
+        <div><img src="/image/coll/2.jpg" alt=""></div>
+    </div>
+    <div class="d-flex flex-row">
+        <div><img src="/image/coll/3.jpg" alt=""></div>
+        <div><img src="/image/coll/4.jpg" alt=""></div>
+    </div>
+</section>
+
+<section class="w-100 d-flex align-items-center justify-content-center mtb-border main-h">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+            </div>
+            <div class="rl-border card-back-blank">
+            </div>
+            <div class="card-back-blank">
+            </div>
+            <div class="l-border card-back-blank ">
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+<section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+                <div class="h-50">04<span><br>
+                    About Us
+                    </span></div>
+            </div>
+            <div class="l-border card-back-blank full-l main-tit2">
+                Who we are
+            </div>
+
+            <div class="l-border card-back-blank buttonsection ">
+                <div class="buttonback">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+            </div>
+            <div class="l-border card-back-blank">
+            </div>
+            <div class="card-back-blank">
+            </div>
+            <div class="l-border card-back-blank ">
+            </div>
+
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
