--- a/index.html
+++ b/index.html
@@ -324,6 +324,89 @@
         </div>
     </div>
 </section>
+
+
+
+<section class="w-100 d-flex align-items-center justify-content-center mb-border main-h7">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+            </div> 
+                       <div class="inmiddle-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+
+            <div class="rl-border card-back-blank" style="padding: 100px 0px 100px 0px !important; height: 350px;">
+                <span class="inmiddle-text-side">We are the decisive factor behind your success</div>
+            <div class="card-back-blank">
+                
+            </div><div class="inmiddle-text-main">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+                <br><br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    
+                    </div>
+            <div class="l-border card-back-blank ">
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+
+
+<section class="w-100 d-flex align-items-center justify-content-center mtb-border main-h">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+            </div>
+            <div class="rl-border card-back-blank">
+            </div>
+            <div class="card-back-blank">
+            </div>
+            <div class="l-border card-back-blank ">
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+<section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+                <div class="h-50">04<span><br>
+                    About Us
+                    </span></div>
+            </div>
+            <div class="l-border card-back-blank full-l main-tit2">
+                Who we are
+            </div>
+
+            <div class="l-border card-back-blank buttonsection ">
+                <div class="buttonback">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+            </div>
+            <div class="l-border card-back-blank">
+            </div>
+            <div class="card-back-blank">
+            </div>
+            <div class="l-border card-back-blank ">
+            </div>
+
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
