the section done

--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@
     <div class=" w-100 d-flex justify-content-center h-100">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo">
-                <div class="h-50">04<span><br>
-                    About Us
+                <div class="h-50">05<span><br>
+                    Some of
                     </span></div>
             </div>
             <div class="l-border card-back-blank full-l main-tit2">
-                Who we are
+                Our clients
             </div>
 
             <div class="l-border card-back-blank buttonsection ">
@@ -398,6 +398,93 @@
             <div class=" d-flex flex-column firstcardinfo">
             </div>
             <div class="l-border card-back-blank">
+            </div>
+            <div class="card-back-blank">
+            </div>
+            <div class="l-border card-back-blank ">
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+
+<section class="w-100 d-flex align-items-center justify-content-center mb-border main-h9">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo" style="width: 15.7%;">
+            </div>
+            <section class="d-flex flex-column full-l2 m-border">
+            <div class="d-flex" style="width: max-content;">
+            <div class="rl-border card-back-blank" style="width: 33.3%;">
+                <img src="/image/logo-clints/logo-1.png" alt="">
+            </div>
+            <div class="card-back-blank" style="width: 33.3%;">
+                <img src="/image/logo-clints/logo-2.png" alt="">
+            </div>
+            <div class="l-border card-back-blank " style="width: 33.3%;">
+                <img src="/image/logo-clints/logo-3.png" alt="">
+            </div>
+            </div>
+            <div class="d-flex mt-border" style="width: max-content;">
+            <div class="rl-border card-back-blank" style="width: 33.3%;">
+                <img src="/image/logo-clints/logo-4.png" alt="">
+            </div>
+            <div class="card-back-blank" style="width: 33.3%;">
+                <img src="/image/logo-clints/logo-5.png" alt="">
+            </div>
+            <div class="l-border card-back-blank " style="width: 33.3%;">
+                <img src="/image/logo-clints/logo-6.png" alt="">
+            </div>
+            </div>
+        </section>
+        </div>
+    </div>
+</section>
+
+
+<section class="w-100 d-flex align-items-center justify-content-center m-border main-h">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class="footer-info">
+                <div class="footer-con">Contact Us</div>
+                <div class="main-tit2">Let's talk</div>
+                <div class="d-flex gap-3">
+                    <div><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</div>                   
+                    <div><i class="fa fa-pinterest" aria-hidden="true"></i> Pinterest</div>                   
+                    <div><i class="fa fa-behance" aria-hidden="true"></i> Behance</div>                   
+                </div>
+            </div>
+            <div class=" d-flex flex-column firstcardinfo">
+            </div>
+            <div class="rl-border card-back-blank">
+            </div>
+
+            <div class="card-back-blank">
+            </div>
+           
+            <div class="l-border card-back-blank ">
+            </div>
+            <div class="footer-info">
+                <div class="rightside-ifno">
+                <div>t: 929-242-6868</div>
+                <div>e: contact@info.com</div>
+                <div>a: 13 Fifth Avenue, NY 10160</div>
+            </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+<section class="w-100 d-flex align-items-center justify-content-center mt-border main-h">
+    <div class=" w-100 d-flex justify-content-center h-100">
+        <div class="d-flex wid-imp rl-border">
+            <div class=" d-flex flex-column firstcardinfo">
+            </div>
+            <div class="rl-border card-back-blank">
             </div>
             <div class="card-back-blank">
             </div>
