--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 </section>
 
 
-<section class="w-100 d-flex align-items-center justify-content-center m-border main-h">
+<section class="w-100 d-flex align-items-center justify-content-center m-border main-h10">
     <div class=" w-100 d-flex justify-content-center h-100">
         <div class="d-flex wid-imp rl-border">
             <div class="footer-info">
@@ -486,13 +486,19 @@
 <section class="w-100 d-flex align-items-center justify-content-center mt-border main-h">
     <div class=" w-100 d-flex justify-content-center h-100">
         <div class="d-flex wid-imp rl-border">
-            <div class=" d-flex flex-column firstcardinfo">
+            <div class=" d-flex flex-column firstcardinfo"> 
+                <div class="footer-info2">Copyright © 2023 Marketing Agency</div>
+
             </div>
             <div class="rl-border card-back-blank">
             </div>
             <div class="card-back-blank">
             </div>
-            <div class="l-border card-back-blank ">
+            <div class="l-border card-back-blank " style="padding: 0 0 0 100px;">
+                <div class="footer-info2">Powered by Marketing Agency
+
+                </div>
+
             </div>
 
         </div>
