--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <section class="background-image-sec">
-        <header class="d-flex justify-content-between w-imp p-4">
+        <header class="d-flex justify-content-between w-imp p-4 notshowonmob">
             <div> <img src="image/logo.png" alt=""></div>
             <div class="d-flex gap-3 align-items-center newclass">
                 <div>Home</div>
@@ -29,14 +29,14 @@
                 <div>Contact</div>
             </div>
         </header>
-        <section class="d-flex w-imp justify-content-center align-items-center h-imp w-imp">
+        <section class="d-flex w-imp justify-content-center align-items-center h-imp w-imp res-notc">
             <div class="d-flex justify-content-between gap-imp">
                 <div class="d-flex"><span class="divider-separator">
                     </span></div>
                 <div>
                     <h1 class="main-tit">Creative &amp;<br>Innovative<br>Ideas</h1>
                 </div>
-                <div class="d-flex flex-column itemsmainj">
+                <div class="d-flex flex-column itemsmainj ">
                     <div><i class="fa fa-quote-left" aria-hidden="true"></i></div>
                     <div class="textitem"> Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas<br> <br>
                         <span class="sign-name">JAMES OLIVER</span>
@@ -47,8 +47,8 @@
         </section>
     </section>
     <section class="w-100 d-flex align-items-center justify-content-center mtb-border main-con">
-        <div class=" w-100 d-flex justify-content-center">
-            <div class="d-flex wid-imp rl-border">
+        <div class=" w-100 d-flex justify-content-center m-center">
+            <div class="d-flex wid-imp rl-border firstcardinfoupper">
                 <div class=" d-flex flex-column firstcardinfo">
                     <div class="h-50">01<span>
                             Services
@@ -90,8 +90,8 @@
         </div>
     </section>
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h">
-        <div class=" w-100 d-flex justify-content-center h-100">
-            <div class="d-flex wid-imp rl-border">
+        <div class=" w-100 d-flex justify-content-center h-100 m-center">
+            <div class="d-flex wid-imp rl-border m-fix">
                 <div class=" d-flex flex-column firstcardinfo">
                 </div>
                 <div class="rl-border card-back-blank">
@@ -107,14 +107,14 @@
 
 
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
-        <div class=" w-100 d-flex justify-content-center h-100">
+        <div class=" w-100 d-flex justify-content-center h-100 m-center">
             <div class="d-flex wid-imp rl-border">
-                <div class=" d-flex flex-column firstcardinfo">
+                <div class=" d-flex flex-column firstcardinfo newfix">
                     <div class="h-50">02<span><br>
                             Why us
                         </span></div>
                 </div>
-                <div class="l-border card-back-blank full-l main-tit2">
+                <div class="l-border card-back-blank full-l main-tit2 newfixn">
                     How we do it
                 </div>
 
@@ -132,7 +132,7 @@
 
 
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
-        <div class=" w-100 d-flex justify-content-center h-100">
+        <div class=" w-100 d-flex justify-content-center h-100 m-center">
             <div class="d-flex wid-imp rl-border">
                 <div class=" d-flex flex-column firstcardinfo">
                 </div>
@@ -150,7 +150,7 @@
 
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h4 ">
         <div class=" w-100 d-flex justify-content-center h-100 flex-column align-items-center">
-            <div class="d-flex wid-imp rl-border">
+            <div class="d-flex wid-imp rl-border" id="image-card-sec">
                 <div class=" d-flex flex-column firstcardinfo">
                     <div></div>
                 </div>
@@ -187,7 +187,7 @@
                 </div>
 
             </div>
-            <div class="d-flex wid-imp rl-border">
+            <div class="d-flex wid-imp rl-border" id="image-card-sec2">
                 <div class=" d-flex flex-column firstcardinfo">
                     <div></div>
                 </div>
@@ -208,7 +208,7 @@
         </div>
     </section>
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h">
-        <div class=" w-100 d-flex justify-content-center h-100">
+        <div class=" w-100 d-flex justify-content-center h-100 m-center">
             <div class="d-flex wid-imp rl-border">
                 <div class=" d-flex flex-column firstcardinfo">
                 </div>
@@ -225,14 +225,14 @@
 
 
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
-        <div class=" w-100 d-flex justify-content-center h-100">
+        <div class=" w-100 d-flex justify-content-center h-100 m-center">
             <div class="d-flex wid-imp rl-border">
-                <div class=" d-flex flex-column firstcardinfo">
+                <div class=" d-flex flex-column firstcardinfo newfix">
                     <div class="h-50">03<span><br>
                         Portfolio
                         </span></div>
                 </div>
-                <div class="l-border card-back-blank full-l main-tit2">
+                <div class="l-border card-back-blank full-l main-tit2 newfixn">
                     Case studies
                 </div>
 
@@ -247,7 +247,7 @@
         </div>
     </section>
     <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
-        <div class=" w-100 d-flex justify-content-center h-100">
+        <div class=" w-100 d-flex justify-content-center h-100 m-center">
             <div class="d-flex wid-imp rl-border">
                 <div class=" d-flex flex-column firstcardinfo">
                 </div>
@@ -274,7 +274,7 @@
 </section>
 
 <section class="w-100 d-flex align-items-center justify-content-center mtb-border main-h">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo">
             </div>
@@ -291,14 +291,14 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
-            <div class=" d-flex flex-column firstcardinfo">
+            <div class=" d-flex flex-column firstcardinfo newfix">
                 <div class="h-50">04<span><br>
                     About Us
                     </span></div>
             </div>
-            <div class="l-border card-back-blank full-l main-tit2">
+            <div class="l-border card-back-blank full-l main-tit2 newfixn">
                 Who we are
             </div>
 
@@ -313,7 +313,7 @@
     </div>
 </section>
 <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo">
             </div>
@@ -331,13 +331,13 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h7">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo">
             </div> 
                        <div class="inmiddle-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 
-            <div class="rl-border card-back-blank" style="padding: 100px 0px 100px 0px !important; height: 350px;">
+            <div class="rl-border card-back-blank" id="cardfst" style="padding: 100px 0px 100px 0px ; height: 350px;">
                 <span class="inmiddle-text-side">We are the decisive factor behind your success</div>
             <div class="card-back-blank">
                 
@@ -357,7 +357,7 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center mtb-border main-h">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo">
             </div>
@@ -374,14 +374,14 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h2">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
-            <div class=" d-flex flex-column firstcardinfo">
+            <div class=" d-flex flex-column firstcardinfo newfix">
                 <div class="h-50">05<span><br>
                     Some of
                     </span></div>
             </div>
-            <div class="l-border card-back-blank full-l main-tit2">
+            <div class="l-border card-back-blank full-l main-tit2 newfixn">
                 Our clients
             </div>
 
@@ -396,7 +396,7 @@
     </div>
 </section>
 <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h3">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo">
             </div>
@@ -414,7 +414,7 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center mb-border main-h9">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo" style="width: 15.7%;">
             </div>
@@ -448,26 +448,26 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center m-border main-h10">
-    <div class=" w-100 d-flex justify-content-center h-100">
-        <div class="d-flex wid-imp rl-border">
-            <div class="footer-info">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
+        <div class="d-flex wid-imp rl-border new-gheight">
+            <div class="footer-info gfxf">
                 <div class="footer-con">Contact Us</div>
-                <div class="main-tit2">Let's talk</div>
-                <div class="d-flex gap-3">
+                <div class="main-tit2 main-tit2new">Let's talk</div>
+                <div class="d-flex gap-3" id="mainftex">
                     <div><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</div>                   
                     <div><i class="fa fa-pinterest" aria-hidden="true"></i> Pinterest</div>                   
                     <div><i class="fa fa-behance" aria-hidden="true"></i> Behance</div>                   
                 </div>
             </div>
-            <div class=" d-flex flex-column firstcardinfo">
+            <div class=" d-flex flex-column firstcardinfo newfix">
             </div>
             <div class="rl-border card-back-blank">
             </div>
 
-            <div class="card-back-blank ">
+            <div class="card-back-blank notshowonmob ">
             </div>
            
-            <div class="l-border card-back-blank dfsnkdlkn"><div class="footer-info">
+            <div class="l-border card-back-blank dfsnkdlkn"><div class="footer-info gjgjcjg">
                 <div class="rightside-ifno">
                 <div>t: 929-242-6868</div>
                 <div>e: contact@info.com</div>
@@ -484,7 +484,7 @@
 
 
 <section class="w-100 d-flex align-items-center justify-content-center mt-border main-h">
-    <div class=" w-100 d-flex justify-content-center h-100">
+    <div class=" w-100 d-flex justify-content-center h-100 m-center">
         <div class="d-flex wid-imp rl-border">
             <div class=" d-flex flex-column firstcardinfo"> 
                 <div class="footer-info2">Copyright © 2023 Marketing Agency</div>
