--- a/index.html
+++ b/index.html
@@ -15,19 +15,37 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
     <section class="background-image-sec">
-        <header class="d-flex justify-content-between w-imp p-4 notshowonmob">
-            <div> <img src="image/logo.png" alt=""></div>
-            <div class="d-flex gap-3 align-items-center newclass">
+        <header class="d-flex justify-content-between w-imp p-4">
+            <div class="notshowonmob"> <img src="image/logo.png" alt=""></div>
+            <div class="d-flex gap-3 align-items-center newclass notshowonmob">
                 <div>Home</div>
                 <div>What We Do</div>
                 <div>Case Studies</div>
                 <div>About Us</div>
                 <div>Contact</div>
             </div>
+            <div class="mobile-container">
+
+                <!-- Top Navigation Menu -->
+                <div class="topnav justify-content-between" >
+                    <!-- <div class="mt-3"></div> -->
+                    <img src="image/logo.png" class="mt-2 mb-2 pl-3">
+                  <!-- <a href="#home" class="active">Logo</a> -->
+                  <div id="myLinks">
+                    <a href="#news">News</a>
+                    <a href="#contact">Contact</a>
+                    <a href="#about">About</a>
+                  </div>
+                  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+                </div>
+                </div>
         </header>
         <section class="d-flex w-imp justify-content-center align-items-center h-imp w-imp res-notc">
             <div class="d-flex justify-content-between gap-imp">
@@ -504,6 +522,16 @@
         </div>
     </div>
 </section>
+<script>
+    function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
 </body>
 
 </html>
